--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -21,14 +21,16 @@
     "@project/shared": "workspace:*",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lexical": "^0.39.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
